--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,7 @@
 /* General rules */
 
+/* от секций отсупать через padding */
+
 body {
   font-family: "Roboto", sans-serif;
   color: #434455;
@@ -9,10 +11,28 @@ body {
 .link {
   text-decoration: none;
 }
-/* .list {
-  text-decoration: none;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
 }
-*/
+
+ul,
+ol {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
+img {
+  display: block;
+}
 
 ul {
   list-style-type: none;
@@ -20,6 +40,25 @@ ul {
 
 button {
   cursor: pointer;
+}
+
+.container {
+  width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 /* Header */
@@ -67,10 +106,37 @@ button {
   color: #404bbf;
 }
 
+.page-header {
+  padding-top: 24px;
+  padding-bottom: 24px;
+  border-bottom: 1px solid #e7e9fc;
+}
+
+.page-header-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.page-navigation {
+  display: flex;
+  column-gap: 40px;
+}
+
+.logo-top {
+  display: flex;
+  align-items: center;
+}
+
+.page-navigation {
+}
+
 /* SECTION 1 - Effective Solutions for Your Business */
 
 .section-one-color {
   background-color: #2e2f42;
+  width: 1440px;
+  height: 600px;
+  flex-shrink: 0;
 }
 
 .header-one {
@@ -80,6 +146,9 @@ button {
   font-weight: 700;
   line-height: 1.07;
   letter-spacing: 0.02em;
+  padding-top: 188px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .button-style {
@@ -90,6 +159,13 @@ button {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
+  display: inline-flex;
+  padding: 16px 32px;
+  align-items: flex-start;
+  border-radius: 4px;
+  margin-left: auto;
+  margin-right: auto;
+  border-width: 0;
 }
 .button-style:hover,
 .button-style:focus {
@@ -97,6 +173,8 @@ button {
 }
 
 /* SECTION 2 - Advantages */
+
+/* .visually-hidden{} */
 
 .header-advantages {
   color: #2e2f42;
