--- a/css/styles.css
+++ b/css/styles.css
@@ -108,8 +108,6 @@ button {
 }
 
 .page-header {
-  padding-top: 24px;
-  padding-bottom: 24px;
   border-bottom: 1px solid #e7e9fc;
 }
 
@@ -121,8 +119,7 @@ button {
 .page-navigation {
   display: flex;
   align-items: center;
-  padding-top: 24px;
-  padding-bottom: 24px;
+  padding: 24px 0;
   gap: 40px;
 }
 
