--- a/css/styles.css
+++ b/css/styles.css
@@ -151,9 +151,7 @@ button {
 
 .section-one-color {
   background-color: #2e2f42;
-  width: 1440px;
-  height: 600px;
-  flex-shrink: 0;
+  padding: 188px 0;
 }
 
 .header-one {
@@ -163,7 +161,10 @@ button {
   font-weight: 700;
   line-height: 1.07;
   letter-spacing: 0.02em;
-  padding-top: 188px;
+}
+
+.header-one {
+  max-width: 496px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -176,14 +177,18 @@ button {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  display: inline-flex;
-  padding: 16px 32px;
-  align-items: flex-start;
+}
+
+.button-style {
+  display: block;
+  min-width: 169px;
+  height: 56px;
+  border: none;
   border-radius: 4px;
   margin-left: auto;
   margin-right: auto;
-  border-width: 0;
 }
+
 .button-style:hover,
 .button-style:focus {
   background-color: #404bbf;
