--- a/css/styles.css
+++ b/css/styles.css
@@ -185,6 +185,7 @@ button {
   height: 56px;
   border: none;
   border-radius: 4px;
+  margin-top: 48px;
   margin-left: auto;
   margin-right: auto;
 }
