--- a/css/styles.css
+++ b/css/styles.css
@@ -237,6 +237,7 @@ button {
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-transform: capitalize;
+  margin-bottom: 72px;
 }
 
 .team-card-color {
@@ -250,6 +251,8 @@ button {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  text-align: center;
+  margin-bottom: 8px;
 }
 .team-position {
   color: #434455;
@@ -257,6 +260,25 @@ button {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  text-align: center;
+}
+
+.section-two-color {
+  padding: 120px 0;
+}
+
+.team-list {
+  display: flex;
+  gap: 24px;
+}
+
+.team-card-color {
+  width: calc((100%-72px) / 4);
+  border-radius: 0px 0px 4px 4px;
+}
+.team-bio {
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 
 /* SECTION 4 - Our Portfolio */
