--- a/css/styles.css
+++ b/css/styles.css
@@ -273,7 +273,7 @@ button {
 }
 
 .team-card-color {
-  width: calc((100%-72px) / 4);
+  width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
 }
 .team-bio {
@@ -313,9 +313,6 @@ button {
   padding-bottom: 120px;
 }
 
-.header-portfolio {
-  margin-bottom: 72px;
-}
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
@@ -323,14 +320,18 @@ button {
   row-gap: 48px;
 }
 
-.portfolio-items {
-  width: calc((100%-48px) / 3);
-}
-
 .project-card {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
+}
+
+.header-portfolio {
+  margin-bottom: 72px;
+}
+
+.portfolio-items {
+  width: calc((100% - 48px) / 3);
 }
 
 /* FOOTER */
